[gd_scene load_steps=13 format=3 uid="uid://cyd684gc12c34"]

[ext_resource type="Texture2D" uid="uid://en6l1kjk2wp2" path="res://Assets/Sprites/Objects/CoinCounter.png" id="1_4vyxr"]
[ext_resource type="Script" path="res://Scripts/LevelGimicks/coin_counter.gd" id="1_bamw2"]
[ext_resource type="Texture2D" uid="uid://botih2wf8serb" path="res://Assets/Sprites/UI/CoinCounterBorder.png" id="2_qfl3e"]
[ext_resource type="FontFile" uid="uid://cjcxsjxekilwg" path="res://Assets/Sprites/UI/HUD/HUDLargeNumbers.png" id="3_jkfpv"]
[ext_resource type="Texture2D" uid="uid://dwdxfiisy3idf" path="res://Assets/Sprites/Particles/Puff.png" id="4_oq25q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_due3g"]
radius = 64.0

[sub_resource type="AtlasTexture" id="AtlasTexture_kfvng"]
atlas = ExtResource("4_oq25q")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nomvo"]
atlas = ExtResource("4_oq25q")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2ru6"]
atlas = ExtResource("4_oq25q")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyj3c"]
atlas = ExtResource("4_oq25q")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3w2qu"]
atlas = ExtResource("4_oq25q")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3c5of"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfvng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nomvo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2ru6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyj3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w2qu")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="CoinCounter" type="Node2D"]
script = ExtResource("1_bamw2")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_4vyxr")

[node name="Hitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_due3g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0333333
anchor_top = 0.888889
anchor_right = 0.116667
anchor_bottom = 1.0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Border2" type="TextureRect" parent="CanvasLayer/Control/Container"]
layout_mode = 2
texture = ExtResource("2_qfl3e")
stretch_mode = 3

[node name="Text" type="Label" parent="CanvasLayer/Control/Container"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_jkfpv")
text = "600"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Border" type="TextureRect" parent="CanvasLayer/Control/Container"]
layout_mode = 2
texture = ExtResource("2_qfl3e")
stretch_mode = 3
flip_h = true

[node name="Puff1" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
unique_name_in_owner = true
position = Vector2(20, 255)
sprite_frames = SubResource("SpriteFrames_3c5of")
frame = 4
frame_progress = 1.0

[node name="Puff2" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
unique_name_in_owner = true
position = Vector2(36, 255)
sprite_frames = SubResource("SpriteFrames_3c5of")
frame = 4
frame_progress = 1.0

[node name="Puff3" type="AnimatedSprite2D" parent="CanvasLayer/Control"]
unique_name_in_owner = true
position = Vector2(52, 255)
sprite_frames = SubResource("SpriteFrames_3c5of")
frame = 4
frame_progress = 1.0

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
